--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-be-vietnam-pro), sans-serif;
 }
 
 @layer utilities {
@@ -89,4 +89,8 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.myContainer {
+  max-width: 1650px;
 }
