--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff; /* Light mode background */
-  --foreground: #171717; /* Light mode foreground */
+  --background: #ffffff; 
+  --foreground: #171717;
 }
 
 /* Dark mode styles */
